@@ -6,22 +6,36 @@ import org.springframework.transaction.annotation.Transactional;
 import ybe.mini.travelserver.domain.room.dto.RoomGetResponse;
 import ybe.mini.travelserver.domain.room.entity.Room;
 import ybe.mini.travelserver.domain.room.repository.RoomRepository;
+import ybe.mini.travelserver.global.api.TourAPIService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class RoomService {
 
     private final RoomRepository roomRepository;
+    private final TourAPIService tourAPIService;
 
     @Transactional(readOnly = true)
-    public List<RoomGetResponse> getAllRoomByAccommodation(Long accommodationId) {
-        List<Room> rooms = roomRepository.findByAccommodationId(accommodationId);
-        return rooms.stream()
+    public List<RoomGetResponse> bringRooms(Long accommodationId) {
+        return roomRepository.findByAccommodationId(accommodationId)
+                .stream()
                 .map(RoomGetResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional(readOnly = true)
+    public RoomGetResponse bringRoom(Long accommodationId, Long roomTypeId) {
+        Room room = tourAPIService.bringRoom(accommodationId, roomTypeId);
+        return RoomGetResponse.fromEntity(room);
+    }
+
+    @Transactional(readOnly = true)
+    public RoomGetResponse bringRoom(Long roomId) {
+        Room room = roomRepository.findById(roomId).orElseThrow(RuntimeException::new);
+        return RoomGetResponse.fromEntity(room);
+    }
+
 
 }
